Bug 1835288 - Fix the non-native popup alignment on macOS. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D179212

--HG--
extra : amend_source : 11baecf6cae09a0dde118fc7d318b9ef50b1a613

--- a/mail/themes/osx/mail/contextMenu.css
+++ b/mail/themes/osx/mail/contextMenu.css
@@ -15,11 +15,16 @@ menupopup::part(content) {
 
 menupopup .menu-iconic-icon {
   width: 16px;
+  margin-inline-start: 0;
+}
+
+menupopup > menu::after {
+  line-height: 0;
 }
 
 menupopup > menu > .menu-text,
 menupopup > menuitem > .menu-text {
-  margin-inline-start: 16px !important;
+  margin-inline-start: 21px !important;
 }
 
 menupopup > menuitem > .menu-right {
